# CS2-smart-parking-lot

./: .gitignore  FINAL.ino  README.md  __init__.py  arduino_comm.py  ctk_addons.py  database.txt  environment.yml  main.py  requirements.txt  setup.cfg
authentication/: perm_manager.py  user.py
config/: requirements.txt
database/: user.txt
frames/: __init__.py  login_frame.py  main_frame.py  main_frame_dashboard.py  user_select_frame.py
