[metadata]
name = CS2
version = 0.1.0
description = Smart parking lot demo (local editable package)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = .
